POR/RefEdge/src/objects/Reference_Request_Account_Contact__c.object
<CustomObject>
    <description>This object holds all the reference request for contacts</description>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <description>Activity Date on Reference Use form; date the Activity occurred.</description>
        <label>Activity date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approve_Deny_Notes__c</fullName>
        <label>Approve Deny Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Request_Status__c</fullName>
        <label>Contact Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Give Up - Legal Won&apos;t Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Give Up - Service Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Give Up - Contact Left Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Give Up - Contact Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Request__c</fullName>
        <formula>HYPERLINK( Id ,&apos;Details&apos;)</formula>
        <label>Contact Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Reference_Request_Account_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback_Response__c</fullName>
        <label>Feedback Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_Status__c</fullName>
        <label>Use Feedback</label>
        <picklist>
            <picklistValues>
                <fullName>Use will not occur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use not yet completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use completed - Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use completed - Unsuccessful</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Influitive_Challenge_Data__c</fullName>
        <description>This fields contains influitive event Id and event points seperated with ::.</description>
        <label>Influitive Challenge Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Escalation_to_Owner_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated to Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Feedback_Notification_Send__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feedback Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Feedback_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feedback Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_No_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Reminder_to_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder Sent to Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Request_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Requests</label>
        <referenceTo>Reference_Request_Account__c</referenceTo>
        <relationshipLabel>Contact Requests</relationshipLabel>
        <relationshipName>Reference_Request_Account_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows for segmenting Reference Use records from other RR records in reporting/dashboard; checked when a Reference Use is recorded from the Reference Use form.</description>
        <label>Reference Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referenceability_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referenceability Type</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Referenceability_Type__c.Project_type__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Referenceability_Type__c.Request_type__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Referenceability_Type__c</referenceTo>
        <relationshipLabel>Contact Requests</relationshipLabel>
        <relationshipName>Contact_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_notes__c</fullName>
        <label>Request notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_ID__c</fullName>
        <label>Feedback Task ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>influitiveId__c</fullName>
        <description>This is influitive id for contact request</description>
        <label>Influitive Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contact Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reference_Request_Account__c</columns>
        <columns>Contact_Title__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Contact_Phone__c</columns>
        <columns>Referenceability_Type__c</columns>
        <columns>Deadline__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>Reference_Use__c</columns>
        <columns>Is_Feedback_Notification_Send__c</columns>
        <columns>Task_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>all_contact_requests_2</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>Reference_Use__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Request__c</columns>
        <columns>Contact_Request_Status__c</columns>
        <columns>Deadline__c</columns>
        <columns>Feedback_Response__c</columns>
        <columns>Task_ID__c</columns>
        <columns>Is_Reminder_to_Owner__c</columns>
        <columns>Is_Escalation_to_Owner_Manager__c</columns>
        <columns>Is_No_Response__c</columns>
        <columns>Is_Feedback_Received__c</columns>
        <columns>Feedback_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>all contact requests 2</label>
    </listViews>
    <nameField>
        <displayFormat>RRAC-{000000}</displayFormat>
        <label>Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>